# Airflow-Docker

./: .gitignore  JSON_Version.R  KurtExample.txt  README.md
CountyStat-Airflow/: LICENSE  README.md  pyproject.toml
CountyStatAirflow/: README.md  pyproject.toml
CountyStatAirflow/src/CountyStatAirflow/: dev_test_function.py  setup.py  slack_alert.py  validates.py
CountyStatAirflow/src/CountyStat_Airflow/: setup.py
Data-Validate/: Schema-Validate.ipynb  Schema-Validate.py  Store_schema.json  example_schemajson.json  generate-schema.R  schema-validate.R  test.json
DataDotWorld/: DDW_Collections_Query.R  DDW_SPARQL_Query.R  DDW_SQL_Query.R  DDW_Upload.R  Dockerfile  EmailTemplate.html  README.md  Send_DDW_Email.py  send_email.py
Kerberos/: Dockerfile  README.md  WriteKeytab.sh
Python/: Dockerfile  requirements.txt
Python-Selenium/: Dockerfile
Python-Selenium-Firefox/: Dockerfile  odbcinst.ini  requirements.txt
R-Basic/: Dockerfile  etc_odbcinst.ini
R-Geo/: Dockerfile
R-Markdown/: Dockerfile  markdown.R  send_email.py  send_email_RUN.py  sharepoint-upload.py
as400-to-staging/: Dockerfile  README.md  as400_to_staging.R
cj_to_warehouse/: Dockerfile  README.md  cj_to_warehouse.R
data-validate/: Dockerfile  README.md  example_dot_env  example_schema.json  generate-schema.R  get_AirflowVariable.py  schema-validate.R
datetime-transform/: Dockerfile  datetime_transform.R
geocode-failures/: geocoder-misses.R
geocoder/: Dockerfile  README.md  warehouse_geocode.R
gis-to-staging/: Dockerfile  README.md  gis_load.R  gis_penndot.R
hootnholler/: README.md  pyproject.toml
hootnholler/src/hootnholler/: dev_test_function.py  hoot_alert.py  setup.py  slack_alert.py
hootnholler/src/hootnholler/hootnholler.egg-info/: PKG-INFO  SOURCES.txt
inter-warehouse-transfer/: Dockerfile  README.md  inter_warehouse_transfer.R
migration/: README.md  migrate.R
moveit-geo/: Dockerfile  README.md  moveit-download.R  moveit-transfer.R
moveit-transfer/: Dockerfile  Dockerfile-r  README.md  moveit-download.R  moveit-transfer.R
mssql-to-staging/: Dockerfile  README.md  mssql_to_staging.R  openssl.cnf
network_to_warehouse/: Dockerfile  README.md  excel_to_staging.R  network_to_warehouse.sh  warehouse_to_network.R  warehouse_to_network.sh
oracle-to-staging/: Dockerfile  README.md  oracle_to_staging.R
(+78 files in other folders)
