[project]
name = "hootnholler"
version = "0.0.1"
authors = [
  { name="Daniel Andrus", email="Daniel.Andrus@AlleghenyCounty.us" },
]
description = "Package for employing Data.World hoots and Slack Notifications within Airflow tasks as callback functions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Topic :: Software Development :: Bug Tracking"
]

[project.urls]
Homepage = "https://github.com/Allegheny-CountyStats/Airflow-Docker/hootnholler"
Issues = "https://github.com/Allegheny-CountyStats/Airflow-Docker/hootnholler/issues"